fix background color not showing

--- a/src/components/homeLayout.css
+++ b/src/components/homeLayout.css
@@ -13,6 +13,7 @@ body {
   justify-content: center;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #d3d3d3;
 }
 
 footer {
